# ImageRecognition

./: .gitignore  pyproject.toml
imagerecognition/: README.md  main.py  proof_of_concept.ipynb
imagerecognition/utils/: model.py  pipeline.py  read_data.py
src/: main.py  proof_of_concept.ipynb
src/utils/: imagedatasets.py  read_data.py
tests/: test_food_101.py  test_indo_fashion.py
